@@ -2,3 +2,4 @@
 - kissjav - fix listing, plaback
 - vipporns - fix nextpage
 - whoreshub - added authentication (required for playing 1024p videos)
+- speedporn - fix Categories - Loads all the pages
